--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 	<h4>My Notebook</h4>
 	<ul>
 	<% @notes.each do |n|%>
-		<%= link_to_function "<li>#{n[0]["data"]["body"]}</li>".html_safe,  "displayNote(\"#{n[0]["data"]["uid"]}\")" %>
+		<%= link_to_function "<li>#{n[0]["data"]["body"]}</li>".html_safe,  "displayNote(\"content\",\"#{n[0]["data"]["uid"]}\")" %>
 	<% end %>
 	</ul>
 </div>
