--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,1 +1,1 @@
-<button class = "btn btn-large btn-success" id="create">Create a new note</button>
+<button onclick="location.href='/notes/new';" class = "btn btn-large btn-success" id="create">Create a new note</button>
