--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,51 +1,16 @@
- <!DOCTYPE html>
-<html>
-<head>
-	<title>Wonder</title>
-		<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-	  <%= stylesheet_link_tag    "bootstrap.min", media: "all", "data-turbolinks-track" => true %>
-	  <%= stylesheet_link_tag    "bootstrap-theme.min", media: "all", "data-turbolinks-track" => true %>
-
-	<style type="text/css">
-		html{min-height:100%;background-color: #4c8ae8;}
-		body{min-height:100%; background-color: #4c8ae8;}
-		#show{
-			text-align: center;
-			height:100%;
-		}
-		h1{
-			font-size: 60px;
-		}
-		h2{
-			font-size: 40px;
-		}
-		a{
-			color:black;
-		}
-		a:hover{
-			color:grey;
-			text-decoration: none;
-		}
-  	</style>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-
-</head>
-<body>
-	<div id = "show">
-		<h1><%= @note["prompt"] %></h1>
-		<h2><%= @note["body"] %></h2>
-		<h3>Linked notes</h3>
-		<ul>
-			<% @linked_notes.each do |n|%>
-				<%= link_to_function "<li>#{n[0]}</li>".html_safe, "displayNote('show', \"#{n[1]}\")" %>
-			<% end %>
-		</ul>
-		<h3>Suggested notes</h3>
-		<ul>
-			<% @suggested_notes.each do |n|%>
-				<%= link_to_function "<li>#{n[1]}</li>".html_safe,  "displayNote('show', \"#{n[2]}\")" %>
-			<% end %>
-		</ul>
-	</div>
-</body>
-</html>
+ <div id = "show">
+	<h1><%= @note["prompt"] %></h1>
+	<h2><%= @note["body"] %></h2>
+	<h3>Linked notes</h3>
+	<ul>
+		<% @linked_notes.each do |n|%>
+			<%= link_to "<li>#{n[0]}</li>".html_safe, "/notes/#{n[1]}", :class => "linked" %>
+		<% end %>
+	</ul>
+	<h3>Suggested notes</h3>
+	<ul>
+		<% @suggested_notes.each do |n|%>
+			<%= link_to "<li>#{n[1]}</li>".html_safe,  "/notes/#{n[2]}", :class => "linked" %>
+		<% end %>
+	</ul>
+</div>
