--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,9 +1,15 @@
-<form>
-  <label for="person_first_name">First name</label>:
-  <input id="person_first_name" name="person[first_name]" type="text" /><br />
+<form action="/notes"  class="new_note" id="new_note" method="post">
+  <div style="margin:0;padding:0;display:inline">
+    <input name="authenticity_token" type="hidden" value="NrOp5bsjoLRuK8IW5+dQEYjKGUJDe7TQoZVvq95Wteg=" />
+  </div>
+  <label for="prompt">Title</label>:
+  <input id="prompt" name="note[prompt]" type="text" /><br />
 
-  <label for="person_last_name">Last name</label>:
-  <input id="person_last_name" name="person[last_name]" type="text" /><br />
+  <label for="body">Note</label>:
+  <input id="body" name="note[body]" type="text" /><br />
 
-  <input name="commit" type="submit"/>
+  <label for="uid">UID</label>:
+  <input id="uid" name="note[uid]" type="text" /><br />
+
+  <input name="commit" type="submit" value="Submit" />
 </form>
