--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,15 +1,12 @@
 <form action="/notes"  class="new_note" id="new_note" method="post">
   <div style="margin:0;padding:0;display:inline">
-    <input name="authenticity_token" type="hidden" value="NrOp5bsjoLRuK8IW5+dQEYjKGUJDe7TQoZVvq95Wteg=" />
+    <input name="authenticity_token" type="hidden" value= <%= form_authenticity_token %> />
   </div>
   <label for="prompt">Title</label>:
   <input id="prompt" name="note[prompt]" type="text" /><br />
 
   <label for="body">Note</label>:
   <input id="body" name="note[body]" type="text" /><br />
-
-  <label for="uid">UID</label>:
-  <input id="uid" name="note[uid]" type="text" /><br />
 
   <input name="commit" type="submit" value="Submit" />
 </form>
