--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,16 +1,20 @@
  <div id = "show">
 	<h1><%= @note["prompt"] %></h1>
 	<h2><%= @note["body"] %></h2>
-	<h3>Linked notes</h3>
-	<ul>
-		<% @linked_notes.each do |n|%>
-			<%= link_to "<li>#{n[0]}</li>".html_safe, "/notes/#{n[1]}", :class => "linked" %>
-		<% end %>
-	</ul>
-	<h3>Suggested notes</h3>
-	<ul>
-		<% @suggested_notes.each do |n|%>
-			<%= link_to "<li>#{n[1]}</li>".html_safe,  "/notes/#{n[2]}", :class => "linked" %>
-		<% end %>
-	</ul>
+	<div class = "linked-container">	
+		<h3>Linked notes</h3>
+		<ul>
+			<% @linked_notes.each do |n|%>
+				<%= link_to "<li>#{n[0]}</li>".html_safe, "/notes/#{n[1]}", :class => "linked" %>
+			<% end %>
+		</ul>
+	</div>
+	<div class = "linked-container">	
+		<h3>Suggested notes</h3>
+		<ul>
+			<% @suggested_notes.each do |n|%>
+				<%= link_to "<li>#{n[1]}</li>".html_safe,  "/notes/#{n[2]}", :class => "linked" %>
+			<% end %>
+		</ul>
+	</div>	
 </div>
