--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,7 @@ body{height:100%;margin:0;	background-color: #4c8ae8;}
 	margin-left:20%;
     background-color: #4c8ae8;
     top:0;
-    height:100%;
+    min-height:100%;
     width:80%;
     position:absolute;
     padding:10px;
@@ -74,6 +74,7 @@ li{
 	list-style-type: none;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	padding-left: 15px;
 }
 
 #notebook a:hover{
@@ -98,6 +99,7 @@ li:hover{
 
 .linked-container{
 	border:2px solid;
+	padding-bottom: 10px;
 	margin-bottom: 20px;
 	margin-left: 25px;
 	margin-right: 25px;
