--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,6 +1,10 @@
  <div id = "show">
-	<h1><%= @note["prompt"] %></h1>
-	<h2><%= @note["body"] %></h2>
+
+		<h1><%= @note["prompt"] %></h1>
+		<h2><%= @note["body"] %></h2>
+	 <div id = "note-upper">	
+		<button class="btn btn-small btn-warning" onclick="displayNotebookList()">Link to this note</button>
+	</div>
 	<div class = "linked-container">	
 		<h3>Linked notes</h3>
 		<% if @linked_notes.empty? %>
@@ -26,3 +30,24 @@
 		<% end %>
 	</div>	
 </div>
+
+<script type = "text/javascript">
+function displayNotebookList(){
+	var str = "<select id='selector'><% @notes.each do |n|%><option value = <%= n[0]['data']['uid'] %>><%= n[0]['data']['prompt']%></option><% end %></select>"
+	var btn = "<br><button class='btn btn-small btn-warning' onclick='linklink()'>Go</button>"
+	document.getElementById('note-upper').innerHTML=str +btn;
+}
+function linklink(){
+	s = document.getElementById('selector');
+	n1 = s.value;
+	n2 = "<%= escape_javascript @note['uid'] %>";
+	n1txt = s.options[ s.selectedIndex].text
+	console.log(n1);
+	console.log(n2);
+	console.log(n1txt);
+
+
+	alert("This note will now be listed in the LINKED section of your note entitled: \""+n1txt+"\".");
+	window.location = "/notes/"+n1;
+}
+</script>
