--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -2,21 +2,19 @@
 
 		<h1><%= @note["prompt"] %></h1>
 		<h2><%= @note["body"] %></h2>
-	 <div id = "note-upper">	
-		<button class="btn btn-small btn-inverse" onclick="displayNotebookList()">Link to this note</button>
-	</div>
 	<br><br>
 	<div class = "linked-container">	
 		<h3>Linked notes</h3>
-		<% if @linked_notes.empty? %>
-			<p style="font-style:italic;">None yet. Add some!</p>
-		<% else %>
+		<% if !@linked_notes.empty?  %>
 			<ul>
 				<% @linked_notes.each do |n|%>
 					<%= link_to "<li>#{n[0]}</li>".html_safe, "/notes/#{n[1]}", :class => "linked" %>
 				<% end %>
 			</ul>
 		<% end %>
+		<div id = "note-upper">	
+				<button class="btn btn-small btn-inverse" onclick="displayNotebookList()">Click to add</button>
+		</div>
 	</div>
 	<div class = "linked-container">	
 		<h3>Suggested notes</h3>
@@ -40,12 +38,12 @@ function displayNotebookList(){
 }
 function linklink(){
 	s = document.getElementById('selector');
-	n1 = s.value;
-	n2 = "<%= escape_javascript @note['uid'] %>";
-	n1txt = s.options[ s.selectedIndex].text
+	n1 = "<%= escape_javascript @note['uid'] %>";
+	n2 = s.value;
+	n2txt = s.options[ s.selectedIndex].text
 	console.log(n1);
 	console.log(n2);
-	console.log(n1txt);
+	console.log(n2txt);
 	$.ajax({
 	    url: "/relationships",
 	    type: "POST",
@@ -53,7 +51,6 @@ function linklink(){
 	             uid1: n1, 
 	             uid2: n2}
 	});
-	alert("This note will now be listed in the LINKED section of your note entitled: \""+n1txt+"\".");
 	window.location = "/notes/"+n1;
 }
 </script>
