redirect on success callback function in ajax post request

--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -48,10 +48,10 @@ function linklink(){
 	$.ajax({
 	    url: "/relationships",
 	    type: "POST",
-	    data: {
-	             uid1: n1, 
-	             uid2: n2}
+	    data: {uid1: n1, uid2: n2},
+	    success: function(){
+        	window.location = "/notes/"+n1;
+        }
 	});
-	window.location = "/notes/"+n1;
 }
 </script>
